--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>main page</title>
-    <!--Google Fonts links-->
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
-    <!--End Google Fonts links-->
+
     <link rel="stylesheet" href="css/main.min.css" />
     <link rel="stylesheet" href="css/main.min.css.map" />
     <link rel="stylesheet" href="css/modern-normalize.min.css" />
@@ -86,7 +86,7 @@
       <section class="section">
         <div class="container">
           <ul class="vector wrapper">
-            <li>
+            <li class="vector__box">
               <h3 class="vector__style">
                 <svg class="vector__icon" width="65px" height="70px">
                   <use href="./images/icons2.svg#icon-antenna-1"></use>
@@ -98,7 +98,7 @@
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="vector__box">
               <h3 class="vector__style">
                 <svg class="vector__icon" width="65px" height="70px">
                   <use href="./images/icons2.svg#icon-clock-1"></use>
@@ -110,7 +110,8 @@
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+
+            <li class="vector__box">
               <h3 class="vector__style">
                 <svg class="vector__icon" width="65px" height="70px">
                   <use href="./images/icons2.svg#icon-diagram-1"></use>
@@ -122,7 +123,7 @@
                 arcu sem. Sed non sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="vector__box">
               <h3 class="vector__style">
                 <svg class="vector__icon" width="65px" height="70px">
                   <use href="./images/icons2.svg#icon-astronaut-1"></use>
