modified:   css/main.min.css #	modified:   css/main.min.css.map #	modified:   index.html #	modified:   sass/components/_button.scss #	modified:   sass/components/_footer.scss #	modified:   sass/components/_header.scss #	modified:   sass/components/_modal.scss #	modified:   sass/utils/_global.scss

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
       </section>
     </main>
     <footer class="down-wall">
-      <div class="container logo__type">
+      <div class="container wrapper logo__type">
         <div>
           <a class="down-wall__stil" href="index.html"
             ><span class="stil__breand">Web</span>Studio</a
