modified:   css/main.min.css #	modified:   css/main.min.css.map #	modified:   index.html #	modified:   sass/components/_header.scss #	modified:   sass/components/_page-photopeople.scss #	modified:   sass/components/_page-photowork.scss #	modified:   sass/components/_section.scss

--- a/index.html
+++ b/index.html
@@ -140,7 +140,9 @@
       </section>
       <section class="third-section">
         <div class="container">
-          <h2 class="section__titles wrapper">Czym sie zajmujemy</h2>
+          <h2 class="section__titles section__titles--color wrapper">
+            Czym sie zajmujemy
+          </h2>
           <ul class="section__inter wrapper">
             <li>
               <div class="photo-work">
