--- a/index.html
+++ b/index.html
@@ -571,28 +571,79 @@
     <script src="./js/modal.js"></script>
 
     <div class="menu-container js-menu-container" id="mobile-menu">
-      <button class="menu-toggle js-close-menu">
-        <svg
-          fill="currentColor"
-          viewBox="0 0 20 20"
-          xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-            clip-rule="evenodd"
-          ></path>
-        </svg>
-      </button>
+      <button class="menu-toggle js-close-menu">X</button>
 
-      <ul class="mobile-menu">
-        <li><a href="" class="link">About</a></li>
-        <li><a href="" class="link">Products</a></li>
-        <li><a href="" class="link">Contacts</a></li>
-        <li><a href="" class="link">Career</a></li>
-      </ul>
+      <nav class="mobile-menu">
+        <ul class="mobile-menu__distance">
+          <li class="mobile-menu__navi">
+            <a
+              class="mobile-menu__style mobile-menu__style--type"
+              href="index.html"
+              >Agencja</a
+            >
+          </li>
+          <li class="mobile-menu__navi">
+            <a
+              class="mobile-menu__style mobile-menu__style--type"
+              href="portfolio.html"
+              >Portfolio</a
+            >
+          </li>
+          <li class="mobile-menu__navi">
+            <a
+              class="mobile-menu__style mobile-menu__style--type"
+              href="index.html"
+              >Kontakt</a
+            >
+          </li>
+        </ul>
+        <ul>
+          <li class="mobile-menu__navi">
+            <a
+              class="mobile-menu__style mobile-menu__style--type-tel"
+              href="tel:+48111111111"
+              >+48111111111</a
+            >
+          </li>
+          <li class="mobile-menu__navi">
+            <a
+              class="mobile-menu__style mobile-menu__style--type-mail"
+              href="mailto:info@S.com"
+              >info@devstudio.com</a
+            >
+          </li>
+        </ul>
+        <ul class="mobile-menu__media">
+          <li>
+            <a
+              class="mobile-menu__style mobile-menu__style--type-social"
+              href=""
+              >Instagram</a
+            >
+          </li>
+          <li>
+            <a
+              class="mobile-menu__style mobile-menu__style--type-social"
+              href=""
+              >Twitter</a
+            >
+          </li>
+          <li>
+            <a
+              class="mobile-menu__style mobile-menu__style--type-social"
+              href=""
+              >Facebook</a
+            >
+          </li>
+          <li>
+            <a
+              class="mobile-menu__style mobile-menu__style--type-social"
+              href=""
+              >LinkedIn</a
+            >
+          </li>
+        </ul>
+      </nav>
     </div>
 
     <script
