modified:   index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </head>
   <body>
     <header class="logo">
-      <div class="container logo__type">
+      <div class="container menu logo__type">
         <button
           class="menu-toggle js-open-menu"
           aria-expanded="false"
