modified:   css/main.min.css #	modified:   css/main.min.css.map #	modified:   index.html #	modified:   sass/components/_button.scss #	modified:   sass/components/_footer.scss #	modified:   sass/components/_header.scss #	modified:   sass/components/_mobile-menu.scss #	modified:   sass/components/_modal.scss #	modified:   sass/components/_page-photopeople.scss #	modified:   sass/components/_page-photowork.scss #	modified:   sass/components/_section.scss #	modified:   sass/utils/_global.scss

--- a/index.html
+++ b/index.html
@@ -568,10 +568,11 @@
                 <svg width="16px" height="15px" class="checkbox__icon">
                   <use href="./images/icon_checkbox.svg#icon-checkbox"></use>
                 </svg>
-                Oświadczam iż akceptuję
-                <a href="#">Regulamin</a>
-                i
-                <a href="#">Politykę Prywatności.</a>
+                <spam class="checkbox__spam"
+                  >Oświadczam iż akceptuję <a href="#">Regulamin</a>
+                  i
+                  <a href="#">Politykę Prywatności.</a></spam
+                >
               </label>
             </div>
             <button type="submit" class="button-form">Wyślij</button>
