modified:   css/main.min.css #	modified:   css/main.min.css.map #	new file:   images/Header img (1).jpg #	modified:   index.html #	modified:   sass/components/_button.scss #	modified:   sass/components/_footer.scss #	modified:   sass/components/_modal.scss #	modified:   sass/components/_page-icon.scss #	modified:   sass/components/_page-photopeople.scss #	modified:   sass/components/_page-vectors.scss

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
     </main>
     <footer class="down-wall">
       <div class="container wrapper logo__type">
-        <div>
+        <div class="connect">
           <a class="down-wall__stil" href="index.html"
             ><span class="stil__breand">Web</span>Studio</a
           >
