modified:   css/main.min.css #	modified:   css/main.min.css.map #	modified:   index.html #	modified:   sass/components/_button.scss #	modified:   sass/components/_footer.scss #	modified:   sass/components/_page-photopeople.scss

--- a/index.html
+++ b/index.html
@@ -451,23 +451,25 @@
         <div class="connect">
           <form>
             <p class="connect__join">Zapisz się do newslettera</p>
-            <label>
-              <input
-                type="email"
-                name="email"
-                placeholder="E-mail"
-                class="connect__letter"
-                required
-              />
-            </label>
-            <button type="submit" class="button-down">
-              <span class="button-down__label">
-                <span>Zapisz się</span>
-                <svg class="button-down__icon" width="44px" height="44px">
-                  <use href="./images/icon-send.svg#icon-icon-send"></use>
-                </svg>
-              </span>
-            </button>
+            <div class="connect__form">
+              <label>
+                <input
+                  type="email"
+                  name="email"
+                  placeholder="E-mail"
+                  class="connect__letter"
+                  required
+                />
+              </label>
+              <button type="submit" class="button-down">
+                <span class="button-down__label">
+                  <span>Zapisz się</span>
+                  <svg class="button-down__icon" width="44px" height="44px">
+                    <use href="./images/icon-send.svg#icon-icon-send"></use>
+                  </svg>
+                </span>
+              </button>
+            </div>
           </form>
         </div>
       </div>
