modified:   css/main.min.css #	modified:   css/main.min.css.map #	new file:   images/main.image.desk@1x.jpg #	new file:   images/main.image.desk@2x.jpg #	renamed:    images/header img.jpg -> images/main.image.mob@1x.jpg #	new file:   images/main.image.mob@2x.jpg #	new file:   images/main.image.tab@1x.jpg #	new file:   images/main.image.tab@2x.jpg #	new file:   images/men1.desk@1x.jpg #	new file:   images/men1.desk@2x.jpg #	new file:   images/men1.mob@1x.jpg #	new file:   images/men1.mob@2x.jpg #	new file:   images/men1.tab@1x.jpg #	new file:   images/men1.tab@2x.jpg #	new file:   images/men_image2.desk@1x.jpg #	new file:   images/men_image2.desk@2x.jpg #	new file:   images/men_image2.mob@1x.jpg #	new file:   images/men_image2.mob@2x.jpg #	new file:   images/men_image2.tab@1x.jpg #	new file:   images/men_image2.tab@2x.jpg #	new file:   images/men_image3.dek@1x.jpg #	new file:   images/men_image3.dek@2x.jpg #	new file:   images/men_image3.mob@1x.jpg #	new file:   images/men_image3.mob@2x.jpg #	new file:   images/men_image3.tab@1x.jpg #	new file:   images/men_image3.tab@2x.jpg #	new file:   images/woman_rel.desk@1x.jpg #	new file:   images/woman_rel.desk@2x.jpg #	new file:   images/woman_rel.mob@1x.jpg #	new file:   images/woman_rel.mob@2x.jpg #	new file:   images/woman_rel.tab@1x.jpg #	new file:   images/woman_rel.tab@2x.jpg #	modified:   index.html #	modified:   sass/components/_page-photopeople.scss

--- a/index.html
+++ b/index.html
@@ -217,10 +217,21 @@
                 <img
                   class="photo-people__img"
                   src="images/men1.jpg"
+                  srcset=""
                   alt="man"
-                  width="270"
-                  height="260"
+                  srcset="
+                    ./images/men1.desk@1x.jpg 270w,
+                    ./images/men1.desk@2x.jpg 540w,
+                    ./images/men1.mob@1x.jpg  354w,
+                    ./images/men1.mob@2x.jpg  768w,
+                    ./images/men1.tab@1x.jpg  450w,
+                    ./images/men1.tab@2x.jpg  900w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                 />
+                <!-- width="270"
+                  height="260" -->
+
                 <figcaption class="photo-people__description">
                   <h3>John Doe</h3>
                   <p class="box__inter">Product Designer</p>
@@ -255,9 +266,19 @@
                   class="photo-people__img"
                   src="images/woman_rel.jpg"
                   alt="woman"
-                  width="270"
-                  height="260"
+                  srcset="
+                    ./images/woman_rel.desk@1x.jpg 270w,
+                    ./images/woman_rel.desk@2x.jpg 540w,
+                    ./images/woman_rel.mob@1x.jpg  354w,
+                    ./images/woman_rel.mob@2x.jpg  768w,
+                    ./images/woman_rel.tab@1x.jpg  450w,
+                    ./images/woman_rel.tab@2x.jpg  900w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                 />
+                <!-- width="270"
+                  height="260" -->
+
                 <figcaption class="photo-people__description">
                   <h3>John Doe</h3>
                   <p class="box__inter">Product Designer</p>
@@ -292,9 +313,19 @@
                   class="photo-people__img"
                   src="images/men_image2.jpg"
                   alt="second man"
-                  width="270"
-                  height="260"
+                  srcset="
+                    ./images/men_image2.desk@1x.jpg 270w,
+                    ./images/men_image2.desk@2x.jpg 540w,
+                    ./images/men_image2.mob@1x.jpg  354w,
+                    ./images/men_image2.mob@2x.jpg  768w,
+                    ./images/men_image2.tab@1x.jpg  450w,
+                    ./images/men_image2.tab@2x.jpg  900w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                 />
+                <!-- width="270"
+                  height="260" -->
+
                 <figcaption class="photo-people__description">
                   <h3>John Doe</h3>
                   <p class="box__inter">Product Designer</p>
@@ -329,9 +360,19 @@
                   class="photo-people__img"
                   src="images/men_image3.jpg"
                   alt="third man"
-                  width="270"
-                  height="260"
+                  srcset="
+                    ./images/men_image3.desk@1x.jpg 270w,
+                    ./images/men_image3.desk@2x.jpg 540w,
+                    ./images/men_image3.mob@1x.jpg  354w,
+                    ./images/men_image3.mob@2x.jpg  768w,
+                    ./images/men_image3.tab@1x.jpg  450w,
+                    ./images/men_image3.tab@2x.jpg  900w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                 />
+                <!-- width="270"
+                  height="260" -->
+
                 <figcaption class="photo-people__description">
                   <h3>John Doe</h3>
                   <p class="box__inter">Product Designer</p>
