modified:   css/main.min.css #	modified:   css/main.min.css.map #	modified:   index.html #	modified:   sass/components/_modal.scss #	modified:   sass/components/_page-icon.scss #

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
                   src="images/men_image3.jpg"
                   alt="third man"
                   srcset="
-                    ./images/men_image3.desk@1x.jpg 270w,
+                    ./images/men_image3.dek@1x.jpg  270w,
                     ./images/men_image3.desk@2x.jpg 540w,
                     ./images/men_image3.mob@1x.jpg  354w,
                     ./images/men_image3.mob@2x.jpg  768w,
