modified:   css/main.min.css #	modified:   css/main.min.css.map #	modified:   index.html #	modified:   portfolio.html #	modified:   sass/components/_button.scss

--- a/index.html
+++ b/index.html
@@ -533,11 +533,7 @@
                 class="frame__inside"
               />
               <p>
-                <svg
-                  width="14px"
-                  height="14px"
-                  class="frame__icon frame__icon--name"
-                >
+                <svg width="14px" height="14px" class="frame__icon">
                   <use href="./images/icon_send2.svg#icon-person_icon"></use>
                 </svg>
               </p>
@@ -555,11 +551,7 @@
                 required
               />
               <p>
-                <svg
-                  width="14px"
-                  height="14px"
-                  class="frame__icon frame__icon--tel"
-                >
+                <svg width="14px" height="14px" class="frame__icon">
                   <use href="./images/icon_send2.svg#icon-phone_icon"></use>
                 </svg>
               </p>
@@ -577,11 +569,7 @@
                 required
               />
               <p>
-                <svg
-                  width="14px"
-                  height="14px"
-                  class="frame__icon frame__icon--email"
-                >
+                <svg width="14px" height="14px" class="frame__icon">
                   <use href="./images/icon_send2.svg#icon-email_icon"></use>
                 </svg>
               </p>
