renamed:    images/men_image3.dek@1x.jpg -> images/men_image3.desk@1x.jpg #	renamed:    images/men_image3.dek@2x.jpg -> images/men_image3.desk@2x.jpg #	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -222,10 +222,10 @@
                   srcset="
                     ./images/men1.desk@1x.jpg 270w,
                     ./images/men1.desk@2x.jpg 540w,
-                    ./images/men1.mob@1x.jpg  354w,
-                    ./images/men1.mob@2x.jpg  768w,
-                    ./images/men1.tab@1x.jpg  450w,
-                    ./images/men1.tab@2x.jpg  900w
+                    ./images/men1.tab@1x.jpg  354w,
+                    ./images/men1.tab@2x.jpg  768w,
+                    ./images/men1.mob@1x.jpg  450w,
+                    ./images/men1.mob@2x.jpg  900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                 />
@@ -269,10 +269,10 @@
                   srcset="
                     ./images/woman_rel.desk@1x.jpg 270w,
                     ./images/woman_rel.desk@2x.jpg 540w,
-                    ./images/woman_rel.mob@1x.jpg  354w,
-                    ./images/woman_rel.mob@2x.jpg  768w,
-                    ./images/woman_rel.tab@1x.jpg  450w,
-                    ./images/woman_rel.tab@2x.jpg  900w
+                    ./images/woman_rel.tab@1x.jpg  354w,
+                    ./images/woman_rel.tab@2x.jpg  768w,
+                    ./images/woman_rel.mob@1x.jpg  450w,
+                    ./images/woman_rel.mob@2x.jpg  900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                 />
@@ -316,10 +316,10 @@
                   srcset="
                     ./images/men_image2.desk@1x.jpg 270w,
                     ./images/men_image2.desk@2x.jpg 540w,
-                    ./images/men_image2.mob@1x.jpg  354w,
-                    ./images/men_image2.mob@2x.jpg  768w,
-                    ./images/men_image2.tab@1x.jpg  450w,
-                    ./images/men_image2.tab@2x.jpg  900w
+                    ./images/men_image2.tab@1x.jpg  354w,
+                    ./images/men_image2.tab@2x.jpg  768w,
+                    ./images/men_image2.mob@1x.jpg  450w,
+                    ./images/men_image2.mob@2x.jpg  900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                 />
@@ -361,12 +361,12 @@
                   src="images/men_image3.jpg"
                   alt="third man"
                   srcset="
-                    ./images/men_image3.dek@1x.jpg  270w,
+                    ./images/men_image3.desk@1x.jpg 270w,
                     ./images/men_image3.desk@2x.jpg 540w,
-                    ./images/men_image3.mob@1x.jpg  354w,
-                    ./images/men_image3.mob@2x.jpg  768w,
-                    ./images/men_image3.tab@1x.jpg  450w,
-                    ./images/men_image3.tab@2x.jpg  900w
+                    ./images/men_image3.tab@1x.jpg  354w,
+                    ./images/men_image3.tab@2x.jpg  768w,
+                    ./images/men_image3.mob@1x.jpg  450w,
+                    ./images/men_image3.mob@2x.jpg  900w
                   "
                   sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                 />
