modified:   css/main.min.css #	modified:   css/main.min.css.map #	new file:   images/111.desk@1x.jpg #	new file:   images/111.desk@2x.jpg #	new file:   images/111.mob@1x.jpg #	new file:   images/111.mob@2x.jpg #	new file:   images/111.tab@1x.jpg #	new file:   images/111.tab@2x.jpg #	deleted:    images/main.image.desk@1x.jpg #	deleted:    images/main.image.desk@2x.jpg #	deleted:    images/main.image.mob@1x.jpg #	deleted:    images/main.image.mob@2x.jpg #	deleted:    images/main.image.tab@1x.jpg #	deleted:    images/main.image.tab@2x.jpg #	new file:   images/main.image@2x.jpg #	new file:   images/main.image_mob@1x.jpg #	new file:   images/main.image_mob@2x.jpg #	new file:   images/main.image_tab@1x.jpg #	new file:   images/main.image_tab@2x.jpg #	modified:   images/men1.desk@1x.jpg #	modified:   images/men1.desk@2x.jpg #	modified:   images/men1.mob@1x.jpg #	modified:   images/men1.mob@2x.jpg #	modified:   images/men1.tab@1x.jpg #	modified:   images/men1.tab@2x.jpg #	modified:   images/men_image2.desk@1x.jpg #	modified:   images/men_image2.desk@2x.jpg #	modified:   images/men_image2.mob@1x.jpg #	modified:   images/men_image2.mob@2x.jpg #	modified:   images/men_image2.tab@1x.jpg #	modified:   images/men_image2.tab@2x.jpg #	modified:   images/men_image3.desk@1x.jpg #	modified:   images/men_image3.desk@2x.jpg #	modified:   images/men_image3.mob@1x.jpg #	modified:   images/men_image3.mob@2x.jpg #	modified:   images/men_image3.tab@1x.jpg #	modified:   images/men_image3.tab@2x.jpg #	new file:   images/portfolio-1.desk@1x.jpg #	new file:   images/portfolio-1.desk@2x.jpg #	new file:   images/portfolio-1.mob@1x.jpg #	new file:   images/portfolio-1.mob@2x.jpg #	new file:   images/portfolio-1.tab@1x.jpg #	new file:   images/portfolio-1.tab@2x.jpg #	new file:   images/portfolio-2.desk@1x.jpg #	new file:   images/portfolio-2.desk@2x.jpg #	new file:   images/portfolio-2.mob@1x.jpg #	new file:   images/portfolio-2.mob@2x.jpg #	new file:   images/portfolio-2.tab@1x.jpg #	new file:   i

--- a/portfolio.html
+++ b/portfolio.html
@@ -122,9 +122,19 @@
                     class="photo-people__img"
                     src="images/portfolio1.jpg"
                     alt="threepeople"
-                    width="370"
-                    height="294"
+                    srcset="
+                      ./images/portfolio1.desk@1x.jpg 370w,
+                      ./images/portfolio1.desk@2x.jpg 740w,
+                      ./images/portfolio1.tab@1x.jpg  354w,
+                      ./images/portfolio1.tab@2x.jpg  768w,
+                      ./images/portfolio1.mob@1x.jpg  450w,
+                      ./images/portfolio1.mob@2x.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                   />
+                  <!-- width="370"
+                    height="294" -->
+
                   <div class="photo-port__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -145,11 +155,21 @@
                 <div class="photo-port__img">
                   <img
                     class="photo-people__img"
-                    src="images/portfolio2.pgn(1).jpg"
+                    src="images/portfolio2.jpg"
                     alt="basketboll"
-                    width="370"
-                    height="294"
+                    srcset="
+                      ./images/portfolio2.desk@1x.jpg 370w,
+                      ./images/portfolio2.desk@2x.jpg 740w,
+                      ./images/portfolio2.tab@1x.jpg  354w,
+                      ./images/portfolio2.tab@2x.jpg  768w,
+                      ./images/portfolio2.mob@1x.jpg  450w,
+                      ./images/portfolio2.mob@2x.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                   />
+                  <!-- width="370"
+                    height="294"
+                  /> -->
                   <div class="photo-port__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -174,9 +194,19 @@
                     class="photo-people__img"
                     src="images/portfolio-1.jpg"
                     alt="seefood"
-                    width="370"
-                    height="294"
+                    srcset="
+                      ./images/portfolio-1.desk@1x.jpg 370w,
+                      ./images/portfolio-1.desk@2x.jpg 740w,
+                      ./images/portfolio-1.tab@1x.jpg  354w,
+                      ./images/portfolio-1.tab@2x.jpg  768w,
+                      ./images/portfolio-1.mob@1x.jpg  450w,
+                      ./images/portfolio-1.mob@2x.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                   />
+                  <!-- width="370"
+                    height="294"
+                  /> -->
                   <div class="photo-port__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -199,9 +229,19 @@
                     class="photo-people__img"
                     src="images/portfolio-2.jpg"
                     alt="headphones"
-                    width="370"
-                    height="294"
+                    srcset="
+                      ./images/portfolio-2.desk@1x.jpg 370w,
+                      ./images/portfolio-2.desk@2x.jpg 740w,
+                      ./images/portfolio-2.tab@1x.jpg  354w,
+                      ./images/portfolio-2.tab@2x.jpg  768w,
+                      ./images/portfolio-2.mob@1x.jpg  450w,
+                      ./images/portfolio-2.mob@2x.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                   />
+                  <!-- width="370"
+                    height="294"
+                  /> -->
                   <div class="photo-port__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -224,9 +264,19 @@
                     class="photo-people__img"
                     src="images/portfolio5.jpg"
                     alt="boxes"
-                    width="370"
-                    height="294"
+                    srcset="
+                      ./images/portfolio5.desk@1x.jpg 370w,
+                      ./images/portfolio5.desk@2x.jpg 740w,
+                      ./images/portfolio5.tab@1x.jpg  354w,
+                      ./images/portfolio5.tab@2x.jpg  768w,
+                      ./images/portfolio5.mob@1x.jpg  450w,
+                      ./images/portfolio5.mob@2x.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                   />
+                  <!-- width="370"
+                    height="294"
+                  /> -->
                   <div class="photo-port__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -249,9 +299,19 @@
                     class="photo-people__img"
                     src="images/111.jpg"
                     alt="screen"
-                    width="370"
-                    height="294"
+                    srcset="
+                      ./images/111.desk@1x.jpg 370w,
+                      ./images/111.desk@2x.jpg 740w,
+                      ./images/111.tab@1x.jpg  354w,
+                      ./images/111.tab@2x.jpg  768w,
+                      ./images/111.mob@1x.jpg  450w,
+                      ./images/111.mob@2x.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                   />
+                  <!-- width="370"
+                    height="294"
+                  /> -->
                   <div class="photo-port__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -274,9 +334,19 @@
                     class="photo-people__img"
                     src="images/portfolio7.jpg"
                     alt="magazyn"
-                    width="370"
-                    height="294"
+                    srcset="
+                      ./images/portfolio7.desk@1x.jpg 370w,
+                      ./images/portfolio7.desk@2x.jpg 740w,
+                      ./images/portfolio7.tab@1x.jpg  354w,
+                      ./images/portfolio7.tab@2x.jpg  768w,
+                      ./images/portfolio7.mob@1x.jpg  450w,
+                      ./images/portfolio7.mob@2x.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                   />
+                  <!-- width="370"
+                    height="294"
+                  /> -->
                   <div class="photo-port__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -299,9 +369,19 @@
                     class="photo-people__img"
                     src="images/portfolio8.jpg"
                     alt="label"
-                    width="370"
-                    height="294"
+                    srcset="
+                      ./images/portfolio8.desk@1x.jpg 370w,
+                      ./images/portfolio8.desk@2x.jpg 740w,
+                      ./images/portfolio8.tab@1x.jpg  354w,
+                      ./images/portfolio8.tab@2x.jpg  768w,
+                      ./images/portfolio8.mob@1x.jpg  450w,
+                      ./images/portfolio8.mob@2x.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                   />
+                  <!-- width="370"
+                    height="294"
+                  /> -->
                   <div class="photo-port__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
@@ -324,9 +404,19 @@
                     class="photo-people__img"
                     src="images/portfolio9.jpg"
                     alt="laptop"
-                    width="370"
-                    height="294"
+                    srcset="
+                      ./images/portfolio9.desk@1x.jpg 370w,
+                      ./images/portfolio9.desk@2x.jpg 740w,
+                      ./images/portfolio9.tab@1x.jpg  354w,
+                      ./images/portfolio9.tab@2x.jpg  768w,
+                      ./images/portfolio9.mob@1x.jpg  450w,
+                      ./images/portfolio9.mob@2x.jpg  900w
+                    "
+                    sizes="(min-width: 1200px) 370px, (min-width: 768px) 354px, (min-width: 320px) 450px, 98vw"
                   />
+                  <!-- width="370"
+                    height="294"
+                  /> -->
                   <div class="photo-port__overlay">
                     <p>
                       Technocrack jest popularną platformą wykorzystywaną do
