modified:   index.html

--- a/index.html
+++ b/index.html
@@ -169,9 +169,13 @@
                   class="photo-work__img"
                   src="images/image1.jpg"
                   alt="komputer"
-                  width="370"
-                  height="294"
+                  srcset="
+                    ./images/image1@1x.jpg 370w,
+                    ./images/image1@2x.jpg 740w
+                  "
+                  sizes="(min-width: 1200px) 370px, 98vw"
                 />
+
                 <div class="photo-work__overlay">
                   <p class="photo-work__text">APLIKACJE KOMPUTEROWE</p>
                 </div>
@@ -183,9 +187,10 @@
                   class="photo-work__img"
                   src="images/img.png"
                   alt="komputer2"
-                  width="370"
-                  height="294"
+                  srcset="./images/img@1x.jpg 370w, ./images/img@2x.jpg 740w"
+                  sizes="(min-width: 1200px) 370px, 98vw"
                 />
+
                 <div class="photo-work__overlay">
                   <p class="photo-work__text">APLIKACJE MOBILNE</p>
                 </div>
@@ -197,9 +202,13 @@
                   class="photo-work__img"
                   src="images/image3.jpg"
                   alt="tablet"
-                  width="370"
-                  height="294"
+                  srcset="
+                    ./images/image3@1x.jpg 370w,
+                    ./images/image3@2x.jpg 740w
+                  "
+                  sizes="(min-width: 1200px) 370px, 98vw"
                 />
+
                 <div class="photo-work__overlay">
                   <p class="photo-work__text">ROZWIĄZANIA GRAFICZNE</p>
                 </div>
